--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hoverer",
-  "version": "2.0.0",
+  "version": "2.0.0-beta.0",
   "description": "make text appear on hover",
   "main": "hoverer.js",
   "scripts": {},
