--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2"
+  },
+  "dependencies": {
+    "requirejs": "^2.3.6"
   }
 }
